<resources>
    <string name="app_name">PROJECTInventoryApp</string>
    <string name="main_activity_label">Inventory</string>
    <string name="catalog_label_books">Books</string>
    <string name="sale">Sale</string>
    <string name="editor_label_add">Add Product</string>
    <string name="editor_label_update">Update Product</string>
    <string name="hint_product_id">Product ID</string>
    <string name="hint_product_name">Product Name</string>
    <string name="product_quantity">x</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_product_author">Author</string>
    <string name="hint_product_isbn13">ISBN 13</string>
    <string name="hint_product_isbn10">ISBN 10</string>
    <string name="hint_supplier_name">Supplier</string>
    <string name="hint_supplier_phone_number">Supplier\'s Phone Number</string>
    <string name="example_text_name">Product Name\nProduct Name</string>
    <string name="example_text_isbn">Product ISBN 13: \nProduct ISBN 10: </string>
    <string name="example_text_quantity">20 left in stock</string>
    <string name="isbn_10">ISBN 10:</string>
    <string name="isbn_13">ISBN 13:</string>
    <string name="quantity_in_stock">left in stock</string>
    <string name="editor_add_description">Add Product to Inventory.</string>
    <string name="editor_update_description" translatable="true">Fill in the attributes below to edit the selected product\'s existing data or contact Supplier to place an order.</string>
    <string name="hint_save_product_button">Add Product</string>
    <string name="menu_add_product">Add Product</string>
    <string name="menu_edit_product">Edit Product</string>
    <string name="menu_remove_product">Remove Product</string>
    <string name="menu_delete_all_products">Delete All Products</string>
    <string name="menu_delete_product">Delete Product</string>
    <string name="hint_cancel_product_button">Cancel</string>
    <string name="display_text_empty">There are no products in the inventory to display at this time.\n\nAdd products to the database list by tapping the \"+\" Button.</string>
    <string name="display_text_loading">Loading.\n\nPlease wait for inventory data to update.</string>
    <string name="unknown_entry">[unknown]</string>
    <string name="id_string">ID:</string>
    <string name="allowed_characters_for_text">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz 1234567890.:!,-</string>
    <string name="allowed_characters_for_price_number">1234567890.</string>
    <string name="allowed_characters_for_phone">1234567890.-()</string>
    <string name="invalid_entry">Invalid Entry.</string>
    <string name="required_field_asterisk">*</string>
    <string name="editor_bundle">editor_bundle</string>
    <string name="action_add">action_add</string>
    <string name="action_edit">action_edit</string>
    <string name="action_remove">action_remove</string>
    <string name="action_delete_all">action_delete_all</string>
    <string name="delete_all_product_dialog">Caution:\n\nAre you sure you want to delete all products in inventory?\nThis cannot be undone.</string>
    <string name="delete_selected_product_dialog">Caution:\n\nAre you sure you want to delete this product from the inventory?\nThis cannot be undone.</string>
    <string name="delete_all_products">Delete All Products</string>
    <string name="delete_selected_product">Delete Product</string>
    <string name="discard_progress_dialog">You are about to leave this page without saving your progress.\n\nDo you wish to continue updating this product or discard all changes?</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="successful_data_deletion_all">All product data deleted</string>
    <string name="successful_data_deletion_selected">Product data deleted</string>
    <string name="successful_data_saved">Product saved</string>
    <string name="successful_data_updated">Product updated</string>
    <string name="successful_product_sale">Product sold!</string>
    <string name="no_data_saved">No data saved</string>
    <string name="no_products_in_inventory">Current product is out of stock</string>
    <string name="unsuccessful_data_saved">Error saving product</string>
    <string name="unsuccessful_data_deletion">Error deleting data</string>
    <string name="unsuccessful_product_sale_update">Error updating sale of product&#8230;</string>
    <string name="error_querying_database">Error querying database</string>
    <string name="error_input_provide_attributes">Error compiling valid input for attributes into ContentValues</string>
    <string name="update_provide_attributes">Please fill in all required attributes</string>
    <string name="illegal_argument_exception_invalid_uri">Illegal URI</string>
    <string name="illegal_argument_exception_require_name">Product requires a valid name</string>
    <string name="illegal_argument_exception_require_price">Product requires a valid price</string>
    <string name="illegal_argument_exception_require_quantity">Product requires a valid quantity</string>
    <string name="illegal_argument_exception_require_author">Product requires an valid author</string>
    <string name="illegal_argument_exception_require_isbn">Product requires an valid ISBN#</string>
    <string name="illegal_argument_exception_unsuccesful_save">Error saving or updating product data</string>
    <string name="price_monetary_symbol">$</string>
    <string name="invalid_uri_for_update">Invalid uri for update</string>
    <string name="invalid_uri_for_deletion">Invalid uri for deletion</string>
    <string name="spacer_view_group_bottom">100dp</string>
    <string name="hint_product_price_multiple_edit_text">10</string>
    <string name="hint_product_price_multiple_text_view">Multiple of</string>
    <string name="order">Order</string>
</resources>
