<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity"
    android:padding="@dimen/common_distance_large">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editor_label_add_description"
            android:layout_marginBottom="@dimen/common_distance_large"/>
        <EditText
            android:id="@+id/product_name_edit_text"
            style="@style/basic_edit_text"
            android:hint="@string/hint_product_name"
            android:inputType="textShortMessage"
            android:digits="@string/allowed_characters_for_text"/>
        <EditText
            android:id="@+id/product_price_edit_text"
            style="@style/basic_edit_text"
            android:hint="@string/hint_product_price"
            android:inputType="numberDecimal"/>
        <EditText
            android:id="@+id/product_quantity_edit_text"
            style="@style/basic_edit_text"
            android:hint="@string/hint_product_quantity"
            android:inputType="number"/>
        <EditText
            android:id="@+id/supplier_name_edit_text"
            style="@style/basic_edit_text"
            android:hint="@string/hint_supplier_name"
            android:inputType="textShortMessage"
            android:digits="@string/allowed_characters_for_text"/>
        <EditText
            android:id="@+id/supplier_phone_number_edit_text"
            style="@style/basic_edit_text"
            android:hint="@string/hint_supplier_phone_number"
            android:inputType="phone"/>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_product_button"
        style="@style/basic_fab"
        android:src="@drawable/baseline_check_white_48"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"/>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/cancel_button"
        style="@style/basic_fab"
        android:src="@drawable/outline_close_white_48"
        android:layout_alignParentLeft="true" />
</RelativeLayout>